--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
 	"icons": {
 		"64": "icons/icon.png"
 	},
+	"content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';",
 	"content_scripts": [
 		{
 			"matches": [
@@ -17,7 +18,8 @@
 		}
 	],
 	"options_ui": {
-		"page": "options/index.html"
+		"page": "options/index.html",
+		"open_in_tab": true
 	},
 	"permissions": [
 		"storage",
